--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "docxtemplater": "^3.42.4",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
+    "pizzip": "^3.1.4",
     "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
