--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,22 +14,22 @@ services:
     networks:
       - letsencrypt-docker-compose_default
     depends_on:
-      - postgres
+      - db
 
-  postgres:
-    image: postgres:16-alpine
+  db:
+    image: mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: example
     ports:
-      - 5432
+      - 3306:3306
     volumes:
       - ./postgres:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_PASSWORD=ibnuabbas
-      - POSTGRES_USER=ibnuabbas
-      - POSTGRES_DB=ibnuabbas
     networks:
       - letsencrypt-docker-compose_default
 
+# change port in prod ex: 5432:5432 to 5432 only
+# enable this in prod
 networks:
   letsencrypt-docker-compose_default:
-    external: true
-# if postgres doesnt work maybe the port already used by another running postgres, consider cleaning docker redundant first
+    # external: true
