--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - ../postgres:/var/lib/postgresql/data
+      - ./postgres:/var/lib/postgresql/data
     networks:
       - letsencrypt-docker-compose_default
 # change port in prod ex: 5432:5432 to 5432 only
