--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:example@localhost:3306/ibnuabbas"
+DATABASE_URL="mongodb+srv://amirul:amirul@cluster0.8kmrj2i.mongodb.net/raporIbnuAbbas"
